--- a/dotmap.html
+++ b/dotmap.html
@@ -12,7 +12,7 @@
 <div id="vis"></div>
 
 <script type="text/javascript">
-  var spec = "https://versted.github.io/FIT3179/dotmap.json";
+  var spec = "https://versted.github.io/FIT3179/DOTMAP.json";
   vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
